[package]
name = "transformer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transformer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
image = "0.24.7"
serde = "1.0.190"
serde_json = "1.0.108"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }